Use static valueOf instead
(cherry picked from commit 0401f74)